# training-analysis

./: .gitignore  pyproject.toml  sttest.py
analysis/: accessors.py  data.py
data/: Training_Vol.csv  Training_Vol18-19.csv  Training_Vol19-20.csv  Training_Vol20-21.csv  test_multi_column.csv  test_no_header.csv
src/analysis/: __init__.py  accessors.py  data.py
