[project]
name = "training-analysis"
version = "0"
description = "Dashboarding and utilities for visualising archery training data"
authors = [
    {name = "Tom Hall", email = "thall-tom@hotmail.co.uk"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "pandas",
    "altair",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
